// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip[Base] should render correctly  1`] = `
<div>
  <noscript />
  <button
    class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
    type="button"
  >
    <span>
      hover me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly  2`] = `
<div>
  <noscript />
  <button
    class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
    type="button"
  >
    <span>
      click me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly  3`] = `
<div>
  <noscript />
  <span
    class="c-un50q1 soui-tooltip-target"
    style="cursor: not-allowed;"
  >
    <button
      class="cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled"
      disabled=""
      style="pointer-events: none;"
      type="button"
    >
      <span>
        Disabled
      </span>
    </button>
  </span>
</div>
`;
